--- a/ToDo_list/index.html
+++ b/ToDo_list/index.html
@@ -31,40 +31,32 @@
                         <div class="task-const">Задача</div>
                         <div class="option-const">Опции</div>
                     </div>
-                    <!-- 
-                    <div class="task-self">
-                        <div class="number">1</div>
-                        <div class="task">какаято задача</div>
-                        <div class="option">
-                            <div>0</div>
-                            <div>
-                                <button>&#10008;
-                                </button>
-                            </div>
-
-                            <div> 
-                                <button class="edit-button">
-                                    edit
-                                </button> 
-                            </div>
-                            
-                        </div>
-                    </div> -->
-
-
-
-
 
                 </div>
+
+                <div class="addButton">
+                    <button id="addNewTaskButton">&#10010;</button>
+                </div>
+
+                <div class="global-info">
+                    <div class="flex">
+                        <div>Всего задач:</div>
+                        <div id="total-amount">0</div>
+                    </div>
+
+                    <div class="flex">
+                        <div>Нужно выполнить:</div>
+                        <div id="total-need-to-do">0</div>
+                    </div>
+
+                    <div class="flex">
+                        <div>Выполнено:</div>
+                        <div id="total-complete">0</div>
+                    </div>
+                </div>
+
+
             </div>
-
-            <div class="addButton">
-                <button id="addNewTaskButton">Добавить задачу</button>
-            </div>
-
-            
-
-
 
         </section>
     </main>
